Updated dependencies, move to Java 8